# hook-bridge

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-runner.yml  publish-sdk.yml
docs/adr/: 0001-language-and-runtime.md  0002-tool-before-verdict-verbs.md  0003-runner-process-boundary.md  0004-tool-after-verdict-verbs.md
examples/: README.md
examples/command-policy/: command_policy.py  test_command_policy.py
examples/deny-list/: deny_list.py  test_deny_list.py
scripts/: render_homebrew_formula.py
