[project]
name = "hook-bridge-workspace"
version = "0"
description = "Development workspace for hook-bridge (not published)."
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
hook-bridge-sdk = { workspace = true }
hook-bridge-runner = { workspace = true }

[dependency-groups]
# Dev env for the whole workspace: the SDK + runner (editable) plus the tooling
# that runs the harness-free tests and the annotate-required type check.
dev = [
    "hook-bridge-sdk",
    "hook-bridge-runner",
    "pytest>=8",
    "pyright>=1.1.390",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
# Tests live beside the SDK source, beside the runner, and beside each example
# Hook. Every example is a PEP 723 script (hyphen-free module name so it
# imports in-process); its directory goes on the path so its harness-free
# tests can import it.
testpaths = [
    "packages/hook-bridge-sdk/tests",
    "packages/hook-bridge/tests",
    "examples/deny-list",
    "examples/command-policy",
]
addopts = "--import-mode=importlib"
pythonpath = ["examples/deny-list", "examples/command-policy"]

[tool.ruff]
line-length = 120
extend-exclude = ["examples/*/__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# hook_bridge.hook.Hook predates PEP 695 generics (py3.12); left as
# TypeVar-based Generic rather than rewritten as part of adding lint.
ignore = ["UP046", "UP047"]

[tool.pyright]
# The annotate-required model from #6: pyright will not infer an unannotated
# ctx (it comes out Unknown), so authors must annotate. Strict enforces that
# and validates the handler signature + drives ctx.tool.kind narrowing.
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = [
    "packages/hook-bridge-sdk/src",
    "packages/hook-bridge-sdk/tests",
    "packages/hook-bridge/src",
    "packages/hook-bridge/tests",
    "examples/deny-list",
    "examples/command-policy",
]
extraPaths = ["examples/deny-list", "examples/command-policy"]
